formatting swagger comments and adding file uploading
