# cmd/server/handlers/albums/delete-one.go
@@ -9,16 +9,17 @@ import (
 )
 
 // DeleteAlbumById @Summary Deletes an album
-// @Tags albums
-// @Produce  json
-// @Success 200 {object} api.Response
-// @Failure 500 {object} internal.Exception
-// @Failure 400 {object} internal.Exception
-// @Failure 429 {object} internal.Exception
-// @Failure 404 {object} internal.Exception
-// @Param id path string true "Album ID"
-// @Param Authorization header string true "Authorization"
-// @Router /api/v1/albums/{id} [delete]
+//
+//	@Tags		albums
+//	@Produce	json
+//	@Success	200				{object}	api.Response
+//	@Failure	500				{object}	api.Exception
+//	@Failure	400				{object}	api.Exception
+//	@Failure	429				{object}	api.Exception
+//	@Failure	404				{object}	api.Exception
+//	@Param		id				path		string	true	"Album ID"
+//	@Param		Authorization	header		string	true	"Authorization"
+//	@Router		/api/v1/albums/{id} [delete]
 func DeleteAlbumById(res http.ResponseWriter, req *http.Request) {
 	id := api.PathVar(req, 1)
 	var response api.Response
